--- a/pc_shop/templates/base.html
+++ b/pc_shop/templates/base.html
@@ -14,7 +14,7 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     {% block css %} {% endblock %}
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <!-- Шапка -->
 <header class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
     <div class="container">
@@ -29,10 +29,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'home' %}">Главная</a>
+                    <a class="nav-link active" href="{% url 'home' %}">
+                        <i class="fas fa-home me-1"></i>Главная
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'product_list' %}">Каталог</a>
+                    <a class="nav-link" href="{% url 'product_list' %}">
+                        <i class="fas fa-list-alt me-1"></i>Каталог
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'community_builds' %}">
+                        <i class="fas fa-cubes me-1"></i>Сборки
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'compare' %}">
+                        <i class="fas fa-balance-scale me-1"></i>Сравнение
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'wishlist' %}">
+                        <i class="fas fa-heart me-1"></i>Желания
+                    </a>
                 </li>
             </ul>
             <div class="d-flex align-items-center">
@@ -72,12 +91,12 @@
 </header>
 
 <!-- Основной контент -->
-<main class="container my-5">
+<main class="container py-5 flex-grow-1">
     {% block content %}{% endblock %}
 </main>
 
 <!-- Футер -->
-<footer class="bg-dark-blue text-white py-4">
+<footer class="bg-dark-blue text-white py-4 mt-auto">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
