--- a/pc_shop/accounts/templates/accounts/register.html
+++ b/pc_shop/accounts/templates/accounts/register.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+<link rel="stylesheet" href="{% static 'css/accounts/register.css' %}">
 {% endblock %}
 {% block content %}
-<div class="d-flex align-items-center min-vh-100">
-    <div class="container">
-        <div class="row justify-content-center">
-            <!-- Измененный класс колонки -->
-            <div class="col-12 col-md-8 col-lg-6">
-                <div class="card shadow auth-form">
+<!-- Добавляем уникальный контейнер -->
+<div class="register-container">
+    <div class="d-flex align-items-center min-vh-100">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6">
+                    <div class="card shadow auth-form">
                     <div class="card-body">
                         <h3 class="card-title text-center">Регистрация</h3>
                         <form method="post" class="mt-4">
